<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_add"
        android:orderInCategory="83"
        android:title="@string/add_language"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_remove"
        android:icon="@drawable/ic_action_remove"
        android:orderInCategory="91"
        android:title="@string/remove_language"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_done"
        android:orderInCategory="101"
        android:title="@string/done"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save"
        android:orderInCategory="103"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
</menu>